# numeral-system-py

./: .readthedocs.yml  .travis.yml  LICENSE  README.md  README.rst  appveyor.yml  requirements-test.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/api-docs/: api-docs-index.rst  exceptions.rst  positional.rst  roman.rst
numeral_system/: __init__.py  exceptions.py  positional.py  roman.py
numsys/: __init__.py  roman.py
src/numeral_system/: __init__.py  exceptions.py  positional.py  roman.py
src/tests/: test_positional.py  test_roman.py
tests/: __init__.py  test_positional.py  test_roman.py
