# https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c

[metadata]
name = numsys
version = attr: numsys.__version__
author = Oleg Strokachuk
author-email = zifter.ai@gmail.com
home-page = https://github.com/zifter/numsys-py
description = attr: numsys.__doc__
long-description = file: README.rst
license = MIT
license-file = COPYING
platform = any
keywords = roman, ui, number systems
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: User Interfaces
    Operating System :: OS Independent
    Topic :: Text Processing

[options]
zip_safe = false
include_package_data = true
python_requires = >= 2.7
packages = numsys
test_suite = tests
setup_requires =
	setuptools >=30.3.0     # minimal version for `setup.cfg`
install_requires =
	six
tests_require =
    pytest
    parameterized

[options.extras_require]
test =
	pytest-cov
	coverage
ci =
    codacy-coverage
    codecov

[bdist_wheel]
universal = true

[check]
metadata = true
restructuredtext = true
strict = true

[sdist]
formats = zip, gztar

;[coverage:report]
;show_missing = true
;exclude_lines =
;    pragma: no cover
;    if False
;    # @abc.abstractmethod
;    # @abc.abstractproperty
;    # raise NotImplementedError
;    # return NotImplemented
;    # except ImportError
;
;[green]
;file-pattern = test_*.py
;verbose = 2
;no-skip-report = true
;quiet-stdout = true
;run-coverage = true
;
;[pydocstyle]
;match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
;match = (?!test)(?!setup)[^\._].*\.py
;inherit = false
;ignore = D200, D203, D213, D406, D407   # Google conventions
;
;[flake8]
;max-line-length = 99
;doctests = True
;exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/