# https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c

[metadata]
name = numeral-system
version = attr: numeral_system.__version__
author = Oleg Strokachuk
author-email = zifter.ai@gmail.com
home-page = https://github.com/zifter/numeral-system-py
description = attr: numeral_system.__doc__
long-description = file: README.md
long_description_content_type = text/markdown
license = MIT
license-file = LICENSE
platform = any
keywords = roman, ui, number, numeral, system
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: User Interfaces
    Operating System :: OS Independent
    Topic :: Text Processing

[options]
zip_safe = false
include_package_data = true
python_requires = >= 2.7
packages = numeral_system
test_suite = tests
setup_requires =
	setuptools >=30.3.0     # minimal version for `setup.cfg`
install_requires =
	six
tests_require =
    pytest
    parameterized

[options.extras_require]
test =
	pytest-cov
	coverage
ci =
    codacy-coverage
    codecov

[bdist_wheel]
universal = true

[check]
metadata = true
restructuredtext = true
strict = true

[sdist]
formats = gztar
