# https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c

[metadata]
name = numeral_system_py
version = attr: numeral_system.__version__
author = Oleg Strokachuk
author_email = zifter.ai@gmail.com
home-page = https://github.com/zifter/numeral-system-py
description = attr: numeral_system.__doc__
long-description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license-file = LICENSE
platform = any
keywords = roman, positional, ui, number, numeral, system
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: User Interfaces
    Operating System :: OS Independent
    Topic :: Text Processing

[options]
zip_safe = false
include_package_data = true
python_requires = >= 2.7
package_dir =
    numeral_system=src/numeral_system
    tests=src/numeral_system
packages =
    numeral_system
test_suite = tests
setup_requires =
	setuptools >=30.3.0     # minimal version for `setup.cfg`
install_requires =
    backports.functools-lru-cache

[bdist_wheel]
universal = true

[check]
metadata = true
strict = true

[sdist]
formats = gztar
